Fix : remove scrollbar for chrome user add Creator name for ticket

--- a/assets/styles/user/profil.css
+++ b/assets/styles/user/profil.css
@@ -4,8 +4,13 @@ body {
     margin: 0;
     padding: 0;
     overflow-y: hidden;
-}
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/cir_0668.jpg");
+    background-size: cover;
 
+}
+::-webkit-scrollbar {
+    display: none;
+}
 .content{
     margin-top: 20px;
     display: flex;
